kubernetes/martijn/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: demo-container
spec:
  replicas: 1
  template:
    metadata:
      labels:
        ttech-app: martijn
    spec:
      containers:
        - name: ttech-demo
          image: liokqazq/ttech:v1
          command: ["python3"]
          args: ["app.py", "--message", "Change me, please!"]
          tty: true
          ports:
            - containerPort: 8000
