kubernetes/martijn/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: demo-container
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: martijn
    spec:
      imagePullSecrets:
        - name: ttech-registry
      containers:
        - name: ttech-demo
          image: 946041274772.dkr.ecr.eu-west-1.amazonaws.com/ttech-kubernetes:v0.1
          command: ["python3"]
          args: ["app.py", "--message", "Change me, please!"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
